@@ -48,6 +48,7 @@ Misc:
  - GBA: Add API for getting Configuration structs for overrides and input
  - GBA: Refactor gba-sensors and gba-gpio into gba-hardware
  - GBA: Refactor gba directory, dropping gba- prefix and making supervisor directory
+ - Debugger: Add support for soft breakpoints
 
 0.1.1: (2015-01-24)
 Bugfixes:
